[metadata]
name = dglhep
author = Jacan Chaplais
author_email = jacanchaplais@gmail.com
description = Graph neural network utilities for high energy physics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacanchaplais/dgl-hep
license = BSD 3-Clause License
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = dglhep
python_requires = >=3
install_requires =
    click

[options.entry_points]
console_scripts = 
    # exename = package.module:funcname

[options.extras_require]
dev =
    pre-commit
    flake8 ==3.9.2
    tox ==3.24.3
    pytest ==6.2.5
    pytest-cov ==2.12.1
    mypy ==0.910

[options.package_data]
dglhep = py.typed

[flake8]
max-line-length = 79
